# fluxrt-cpp

./: .gitignore  .markdownlint.json  BLOCKED.md  CMakeLists.txt  CMakePresets.json  CONSTITUTION.md  LICENSE  README.md  build.ps1  do_build.cmd  run_tests.cmd  setup.cfg  temp_stderr.txt  vcpkg.json
models/: README.md
models/base-config/text_encoder/: config.json  model.safetensors.index.json
models/base-config/transformer/: config.json
specs/phase-0-spike/: plan.md  research.md  results.md  tasks.md
src/: CMakeLists.txt
src/inference/: engine_manager.cpp  engine_manager.h
src/inference/kernels/: spatial_kv_cache.cu  spatial_kv_cache.h
src/inference/plugins/: attention_kernels.cu  attention_kernels.h  flux2_double_block_plugin.cpp  flux2_double_block_plugin.h  flux2_kernels.cu  flux2_kernels.h  flux2_plugin_base.cpp  flux2_plugin_base.h  gather_scatter_kernels.cu  gather_scatter_kernels.h  identity_plugin.cpp  identity_plugin.h  plugin_init.cpp  plugin_init.h  plugin_registry.cpp  weight_loader.cpp  weight_loader.h
src/spike/: capture_reference.py  main.cpp  test_gather_scatter.cpp  test_identity_plugin.cpp  test_spatial_cache.cu  test_spatial_cache_trt.cpp
src/utils/: error.h  tensor.cpp  tensor.h
tests/fixtures/: README.md
tools/: _inspect_onnx_shapes.py  build_trt_engine.py  capture_reference.py  download_aio.py  export_block_weights.py  export_onnx.py  verify_load.py
